--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="title_send">Send</string>
     <string name="title_receive">Receive</string>
     <string name="title_settings">Settings</string>
-    <string name="click_test">Click Test</string>
+    <string name="click_test">Get IP</string>
 </resources>
