--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_receive">Receive</string>
     <string name="title_settings">Settings</string>
     <string name="click_test">Get IP</string>
+    <string name="search_devices">Search devices</string>
+
 </resources>
