--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">sendudes</string>
     <string name="title_send">Send</string>
     <string name="title_receive">Receive</string>
-    <string name="title_settings">Settings</string>
+    <string name="title_settings">History</string>
     <string name="click_test">Get IP</string>
     <string name="click_file">Choose File</string>
     <string name="search_devices">Search devices</string>
