--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="click_file">Select File</string>
     <string name="search_devices">Search devices</string>
     <string name="send_file">Send File</string>
+    <string name="receiving_from">"Receiving from: "</string>
+    <string name="user_disconnected">User disconnected</string>
+    <string name="no_user_found">No user found</string>
 
 </resources>
