--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,12 @@
     <string name="receiving_from">"Receiving from: "</string>
     <string name="user_disconnected">User disconnected</string>
     <string name="no_user_found">No user found</string>
+    <string name="your_ip">Your IP</string>
+    <string name="ip_placeholder">192.168.12.2</string>
+    <string name="set_user">Set user</string>
+    <string name="scan_users">SCAN USERS</string>
+    <string name="select_a_file">Select a file</string>
+    <string name="enter_your_text_here">Enter your text here</string>
+    <string name="sendFragment_loading">Loading</string>
 
 </resources>
